# magic-card-detector-cpp

./: .gitignore  CMakeLists.txt  Core.cpp  Core.h  Hash.cpp  OCR.cpp  README.md  main.cpp
